fix bugs in methods for Chat